@@ -452,7 +452,15 @@ public class Javac extends MatchingTask {
      */
     public void setFork(boolean fork)
     {
-  this.fork = fork;
+        this.fork = fork;
+    }
+
+    /**
+     * Sets whether to fork the javac compiler.
+     */
+    public boolean isForkedJavac() {
+        return fork || 
+            "extJavac".equals(project.getProperty("build.compiler"));
     }
 
 
@@ -508,8 +516,8 @@ public class Javac extends MatchingTask {
 
         String compiler = project.getProperty("build.compiler");
 
-  if (fork) {
-      if (compiler != null) {
+        if (fork) {
+            if (compiler != null) {
                 if (isJdkCompiler(compiler)) {
                     log("Since fork is true, ignoring build.compiler setting.",
                         Project.MSG_WARN);
@@ -518,13 +526,13 @@ public class Javac extends MatchingTask {
                 else {
                     log("Since build.compiler setting isn't classic or modern, ignoring fork setting.", Project.MSG_WARN);
                 }
-      }
+            }
             else {
                 compiler = "extJavac";
             }
-  }
+        }
 
-  if (compiler == null) {
+        if (compiler == null) {
             if (Project.getJavaVersion() != Project.JAVA_1_1 &&
                 Project.getJavaVersion() != Project.JAVA_1_2) {
                 compiler = "modern";
